# biolink-model-toolkit

./: .cruft.json  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  bmt.html  example_usage.html  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  release-instructions.md  requirements.txt  search.html  searchindex.js  setup.py  sonar-project.properties  tox.ini  usage.html
.github/workflows/: check-dependencies.yaml  dependency-audit.yaml  deploy-autodoc.yml  initialize-toolkit-daily.yaml  release-pypi.yml  run-tests.yml  run-tox.yml
_sources/: bmt.rst.txt  index.rst.txt
_sources/intro/: example_usage.md.txt
bmt/: README.md  __init__.py  biolink-model.yaml  pydantic.py  toolkit.py  toolkit_generator.py  utils.py
docs/: Makefile  bmt.html  conf.py  example_usage.html  genindex.html  index.html  index.rst  installation.rst  intro.html  intro.md  make.bat  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html  usage.md  usage.rst
docs/_modules/: index.html
docs/_modules/bmt/: toolkit.html  toolkit_generator.html  utils.html
docs/_sources/: index.rst.txt  usage.rst.txt
docs/intro/: example_usage.md
docs/source/: bmt.rst  conf.py  modules.rst
doctrees/: bmt.doctree  environment.pickle  index.doctree  modules.doctree  usage.doctree
doctrees/intro/: example_usage.doctree  intro.doctree
examples/: alliance-demo.ipynb  bmt-tutorial.ipynb  edgelabel.py  inverses.ipynb  predicates.csv
html/: .buildinfo  genindex.html  search.html  searchindex.js  usage.html
html/_sources/: modules.rst.txt
html/intro/: intro.html
intro/: example_usage.html  intro.html
src/bmt/: pydantic.py  pydantic_utils.py  toolkit.py  utils.py
test/: test.py
test/unit/: test_toolkit.py  test_utils.py
tests/unit/: test_biolink_schema_loading.py  test_predicate_map_loading.py  test_pydantic.py  test_toolkit.py  test_toolkit_generator.py  test_utils.py
