[tool.poetry]
name = "bmt"
version = "0.0.0"
description = "Biolink Model Toolkit: A Python API for working with the Biolink Model"
authors = ["Sierra Taylor Moxon <sierra.taylor@gmail.com>"]
license = "BSD"

readme = "README.md"
repository = "https://github.com/biolink/biolink-model-toolkit"
documentation = "https://biolink.github.io/biolink-model-toolkit/"


keywords = ["schema", "linked data", "data modeling", "biolink", "api"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

packages = [
    { include = "bmt" }
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dependencies]
python = "^3.9"
deprecation = "^2.1.0"
stringcase = "^1.2.0"
biolink-model = "^4.3.3"
poetry = "^2.2.1"
notebook = "^7.4.7"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-napoleon = "^0.7"
recommonmark = "^0.7.1"
# sphinx-autodoc-typehints = "^1.19.5"

[tool.poetry.extras]
docs = ["Sphinx", "sphinxcontrib-mermaid"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
