[project]
name = "bmt"
version = "0.0.0"
description = "Biolink Model Toolkit: A Python API for working with the Biolink Model"
authors = [
    {name="Sierra Taylor Moxon", email="sierra.taylor@gmail.com"},
    {name="Richard Bruskiewich", email=""},
    {name="Daniel Korn", email="daniel_korn@med.unc.edu"}
]
requires-python = ">=3.10,<4"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/biolink/biolink-model-toolkit"
documentation = "https://biolink.github.io/biolink-model-toolkit/"
dependencies = [
    "deprecation>=2.1.0,<3.0.0",
    "stringcase>=1.2.0,<2.0.0",
    "biolink-model>=4.3.7,<5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9.0.0",
    "Sphinx>=5.3.0,<6.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
    "sphinxcontrib-napoleon>=0.7,<1.0",
    "recommonmark>=0.7.1,<1.0.0",
    # sphinx-autodoc-typehints = ">=1.19.5,<2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]


[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"


keywords = ["schema", "linked data", "data modeling", "biolink", "api"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: BSD-3-Clause",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

#TODO: These lines may not be necessary, bmt should be automatically detected as a target package.
packages = [
    { include = "bmt" }
]

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.hatch.version]
source = "uv-dynamic-versioning"

#[tool.poetry.extras]
#docs = ["Sphinx", "sphinxcontrib-mermaid"]

[tool.ruff]
line-length = 120

lint.fixable = ["ALL"]

lint.ignore = [
    "F541", # f-strings with no placeholders
    "S101", # allow asserts
]

# Select or ignore from https://beta.ruff.rs/docs/rules/
lint.select = [
    "B",  # bugbear
    # "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "Q",  # flake8-quotes
    "S",  # flake8-bandit
    "UP", # pyupgrade
    "W",  # Warning
]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"